2007-08-14 Yusei
* Add utility scripts to collect translation messages.

2007-08-14 Yusei
* Add glossary module.

2007-02-13 Kevin
* Auto-update Bug's Closed Date on cancel.
* More verbose description.
* Increase version number.
* Update copyright notice.

2006-10-13 yo
* to_address defaults to from_address instead of my address in the notification script.
* fix bad english

2006-09-15 jerome
* Add an alarm to send a summary of all open bugs.

2006-08-29 jerome
* Remove related keys, they are automatically generated.

2006-07-25 chris
* Added function to update business template, without reverting the changes

2006-07-19 chris
* Renamed or moved some files/folders to avoid conflicts with other business templates.

2006-07-11 chris
* Now possible to filter files to commit from diff view

2006-07-05 chris
* ERP5Subversion now detects outdated files so that user know if he needs to update his working copy or not.

2006-06-26 chris
* Update according to last XHTML style update

2006-06-22 chris
* erp5Subversion is now XHTML Strict compliant
* erp5Subversion works with erp5_xhtml_style

2006-06-12 chris
* added Shorted/Taller buttons to adjust tree height

2006-06-07 Kevin
* Check tested box if tested property is equal to 'True'.

2006-05-30 chris
* Added legend in diff page
* Improved buttons in diff page

2006-05-24 chris
* XHTML compliant

2006-05-23 chris
* do not extract business template anymore when going back from diff

2006-05-22 chris
* display reminder when committing

2006-05-18 chris
* fixed some bugs in sslTrust / login (x2)
* added action to update local working copy
* get current zope username if preferred username is not set
* propose last changelog as commit text.

2006-05-17 chris
* added search engine for orphan objects : Base_viewOrphanObjects

2006-05-17 yo
* Bugs must be tested before closing now. If you need to get rid of invalid bugs, use cancel instead.

2006-05-10 chris
* some bug fixes / optimizations
* can now show unmodified files
